fix: set margin bottom of page banner H1s on mobile to 20px

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
@@ -77,6 +77,13 @@ h1,
   margin-bottom: 30px
 }
 
+@media (max-width: 63.99em) {
+    h1,
+    .dfe-heading-xl, .govuk-heading-xl {
+      margin-bottom: 20px
+    }
+}
+
 .govuk-header__container {
     position: relative;
     margin-bottom: -10px;
